--- a/public/css/style.css
+++ b/public/css/style.css
@@ -331,20 +331,45 @@ h2 {
   }
 
   
-
+  .progress-deck{
+    display: flex;
+    border: 1px solid #000000 ;
+  }
   .progress-deck.large{
     /* width: 300px; */
     height: 20px;
-    border: 1px solid #000000 ;
     border-radius: 5px;
     margin-top: 20px;
   }
 
-  .progress-deck{
+  .progress-deck.list{
     display: flex;
-    /* width: 300px; */
-    height: 5px;
-    border: 2px solid #000000 ;
+    width: 300px;
+    height: 10px;
+  }
+
+
+  .item-deck.tree-1{
+    background-color: #ffffff;
+    border: 1px solid #000000 ;
+    margin: 5px;
+    padding: 5px;
+  }
+
+  .item-deck.tree-1 span{
+    color: darkslategrey;
+    font-size: x-small;
+  }
+
+  .item-deck.tree-1-1-1, .item-deck.tree-1-1-2, .item-deck.tree-1-1-3{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .item-deck.tree-1-2-2{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
 
