--- a/templates/item_deck.html.twig
+++ b/templates/item_deck.html.twig
@@ -21,9 +21,9 @@
                     {% endfor %}
                     
                     {% if isFavori %}
-                        <i  data-deck-id="{{ deck.id }}" data-is-favori="1" class="add-favori red fa-solid fa-heart"></i>
+                        <i onclick="addFavori(this)" data-deck-id="{{ deck.id }}" data-is-favori="1" class="add-favori red fa-solid fa-heart"></i>
                     {% else %}
-                        <i  data-deck-id="{{ deck.id }}" data-is-favori="0" class="add-favori fa-solid fa-heart-circle-plus"></i>   
+                        <i onclick="addFavori(this)" data-deck-id="{{ deck.id }}" data-is-favori="0" class="add-favori fa-solid fa-heart-circle-plus"></i>   
                     {% endif %}     
                     </button>
                 {% endif %}
@@ -46,10 +46,11 @@
         <div class="item-deck tree-1-2-1"><span>description : </span>{{ deck.description }}</div>
         <div class="item-deck tree-1-2-2"><span>progression : </span> 
 
-            <div class="progress-deck list">
+            <div data-deck-id="{{ deck.id }}" class="progress-deck list">
 
 
-                {% set nbrNoLevel = deck.cartes|length %}
+                {% set nbrCarte = deck.cartes|length %}
+                {% set nbrNoLevel = nbrCarte %}
                 {% set nbrLevel0 = 0 %}
                 {% set nbrLevel1 = 0 %}
                 {% set nbrLevel2 = 0 %}
@@ -67,7 +68,7 @@
 
                             {% set nbrLevel1 = nbrLevel1 + 1 %}
 
-                        {% elseif positionCarte.position == 1 %}
+                        {% elseif positionCarte.position == 2 %}
 
                             {% set nbrLevel2 = nbrLevel2 + 1 %}
 
@@ -77,7 +78,10 @@
 
                 {% endfor %}
 
-                <div class="no-level" nbr="{{ nbrNoLevel }}"></div><div class="level-0" nbr="{{ nbrLevel0 }}"></div><div class="level-1" nbr="{{ nbrLevel1 }}"></div><div class="level-2" nbr="{{ nbrLevel2 }}"></div>
+                <div class="no-level" {{'style=width:'~ 100 * nbrNoLevel / nbrCarte ~'%'}}></div>
+                    <div class="level-0" {{'style=width:'~ 100 * nbrLevel0 / nbrCarte ~'%'}}></div>
+                    <div class="level-1" {{'style=width:'~ 100 * nbrLevel1 / nbrCarte ~'%'}}></div>
+                    <div class="level-2" {{'style=width:'~ 100 * nbrLevel2 / nbrCarte ~'%'}}></div>
             </div>
 
         </div>
