Creation edit mode pour deck

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,7 @@
                 <nav>
                     <ul>
                         <li><a href="{{ path('app_utilisateur') }}">Liste utilisateurs</a></li>
+                        <li><a href="{{ path('deck_create') }}">Créer un deck</a></li>
                         {% if app.user %}
                             <li><a href="{{ path('app_logout') }}">Se déconnecter</a></li>
                             <li><a href="">Mon profil</a></li>
