--- a/templates/deck/create.html.twig
+++ b/templates/deck/create.html.twig
@@ -20,10 +20,16 @@
     <table class="table table-dark table-striped">
         <thead>
             <tr>
-                <th>#</th>
-                <th>Question</th>
-                <th>Réponse</th>
-                <th>Action</th>
+                <th rowspan="2">#</th>
+                <th colspan="2">Question</th>
+                <th colspan="2">Réponse</th>
+                <th rowspan="2">Action</th>
+            </tr>
+            <tr>
+                <th>Texte</th>
+                <th>Image</th>
+                <th>Texte</th>
+                <th>Image</th>
             </tr>
         </thead>
         <tbody id="deck_cartes"
@@ -34,7 +40,9 @@
                 <tr class="carte">
                     <td>{{ nbrCarte }}</td>
                     <td>{{ form_widget(carte.question) }}</td>
+                    <td>{{ form_widget(carte.image_question) }}</td>
                     <td>{{ form_widget(carte.reponse) }}</td>
+                    <td>{{ form_widget(carte.image_reponse) }}</td>
                     <td>
                         <button type="button" class="btn btn-sm btn-danger" data-card-remove>Supprimer cette carte</button>
                     </td>
@@ -99,7 +107,9 @@ function addFormCarte(){
     var $newCard = $('<tr class="carte"></tr>').append(
         $('<td></td>').append(++nbrAddCarte),
         $('<td></td>').append($(newForm).find('textarea[id$="_question"]').prop('outerHTML')),
+        $('<td></td>').append($(newForm).find('input[id$="_image_question"]').prop('outerHTML')),
         $('<td></td>').append($(newForm).find('textarea[id$="_reponse"]').prop('outerHTML')),
+        $('<td></td>').append($(newForm).find('input[id$="_image_reponse"]').prop('outerHTML')),
         $('<td></td>').append('<button type="button" class="btn btn-sm btn-danger" data-card-remove>Supprimer cette carte</button>')
     );
     
